--- a/Inspection/Base.lproj/Main.storyboard
+++ b/Inspection/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Qo6-0X-hCg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bq1-0O-TV6">
     <device id="ipad9_7" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -101,41 +101,9 @@
                     <view key="view" contentMode="scaleToFill" id="uMi-f0-uSz">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="u8U-NK-x4G">
-                                <rect key="frame" x="0.0" y="115" width="768" height="909"/>
-                            </scrollView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wOU-yi-PuS" customClass="ButtonBarView" customModule="XLPagerTabStrip">
-                                <rect key="frame" x="0.0" y="50" width="768" height="65"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="65" id="DGT-yJ-YyU"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="g5D-IU-EFJ">
-                                    <size key="itemSize" width="75" height="75"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells/>
-                            </collectionView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="u8U-NK-x4G" firstAttribute="top" secondItem="wOU-yi-PuS" secondAttribute="bottom" id="IV1-gA-ZbC"/>
-                            <constraint firstItem="Sss-b4-6RN" firstAttribute="top" secondItem="u8U-NK-x4G" secondAttribute="bottom" id="Vno-x7-Nj8"/>
-                            <constraint firstAttribute="trailing" secondItem="u8U-NK-x4G" secondAttribute="trailing" id="f7l-o5-9qO"/>
-                            <constraint firstItem="wOU-yi-PuS" firstAttribute="top" secondItem="v2g-LL-wRp" secondAttribute="bottom" id="hJq-AX-MDx"/>
-                            <constraint firstAttribute="trailing" secondItem="wOU-yi-PuS" secondAttribute="trailing" id="kJS-zc-p4Q"/>
-                            <constraint firstItem="u8U-NK-x4G" firstAttribute="leading" secondItem="uMi-f0-uSz" secondAttribute="leading" id="kqS-FD-SCJ"/>
-                            <constraint firstItem="wOU-yi-PuS" firstAttribute="leading" secondItem="uMi-f0-uSz" secondAttribute="leading" id="oXu-KR-c33"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="SvU-fM-jlh"/>
-                    <connections>
-                        <outlet property="buttonBarView" destination="wOU-yi-PuS" id="Ob7-g0-24e"/>
-                        <outlet property="containerView" destination="u8U-NK-x4G" id="ub0-bW-e3g"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MFf-AB-V7u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -744,7 +712,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="uUB-mk-Nhb" customClass="ImageListCollectionViewCell" customModule="Inspection" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="imageCell" id="uUB-mk-Nhb" customClass="ImageListCollectionViewCell" customModule="Inspection" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="247" height="234"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DPQ-kA-jQg">
@@ -774,6 +742,7 @@
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S8l-ew-pft">
                                                             <rect key="frame" x="0.0" y="0.0" width="237" height="159"/>
+                                                            <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -800,7 +769,6 @@
                                         <size key="customSize" width="247" height="234"/>
                                         <connections>
                                             <outlet property="deleteBtn" destination="2B9-gP-Hc3" id="2zK-kI-cOA"/>
-                                            <outlet property="deletePressed" destination="2B9-gP-Hc3" id="0FG-H8-ccU"/>
                                             <outlet property="imgView" destination="S8l-ew-pft" id="ufp-7r-dso"/>
                                             <outlet property="txtLbl" destination="Qzz-ib-c4o" id="g5a-hX-1X2"/>
                                         </connections>
