--- a/Inspection/Base.lproj/Main.storyboard
+++ b/Inspection/Base.lproj/Main.storyboard
@@ -915,6 +915,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Images" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xVP-fV-O1w">
+                                <rect key="frame" x="335.5" y="500.5" width="97.5" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Nmz-V0-ZFW">
                                 <rect key="frame" x="0.0" y="200" width="768" height="675"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -1138,8 +1144,10 @@
                             <constraint firstItem="QAK-5y-UkK" firstAttribute="centerX" secondItem="mn8-SW-rIr" secondAttribute="centerX" id="Laf-AL-JWs"/>
                             <constraint firstItem="MDW-PD-JRA" firstAttribute="top" secondItem="Nmz-V0-ZFW" secondAttribute="bottom" constant="149" id="MiV-TP-rZZ"/>
                             <constraint firstItem="MDW-PD-JRA" firstAttribute="top" secondItem="hVd-FZ-Q7e" secondAttribute="bottom" constant="20" id="Oom-hq-7pZ"/>
+                            <constraint firstItem="xVP-fV-O1w" firstAttribute="centerX" secondItem="oxc-FA-Kyc" secondAttribute="centerX" id="SxN-Ly-Sud"/>
                             <constraint firstItem="mn8-SW-rIr" firstAttribute="width" secondItem="oxc-FA-Kyc" secondAttribute="width" id="Vwy-xg-abQ"/>
                             <constraint firstItem="Nmz-V0-ZFW" firstAttribute="leading" secondItem="oxc-FA-Kyc" secondAttribute="leading" id="Wyk-CP-Zt9"/>
+                            <constraint firstItem="xVP-fV-O1w" firstAttribute="centerY" secondItem="oxc-FA-Kyc" secondAttribute="centerY" id="Y2X-3e-Mog"/>
                             <constraint firstItem="Nmz-V0-ZFW" firstAttribute="top" secondItem="EOl-AD-i37" secondAttribute="bottom" constant="200" id="d7L-nj-Ueb"/>
                             <constraint firstItem="mn8-SW-rIr" firstAttribute="top" secondItem="EOl-AD-i37" secondAttribute="bottom" id="sWw-LI-cnM"/>
                             <constraint firstAttribute="trailing" secondItem="Nmz-V0-ZFW" secondAttribute="trailing" id="uoU-3m-Fev"/>
@@ -3037,7 +3045,7 @@
                                         </constraints>
                                         <state key="normal" image="backArrow"/>
                                         <connections>
-                                            <action selector="bkPressed:" destination="Qo6-0X-hCg" eventType="touchUpInside" id="Dv8-rW-Odb"/>
+                                            <action selector="bkPressed:" destination="2wY-gb-1Mg" eventType="touchUpInside" id="UPl-gp-gQm"/>
                                         </connections>
                                     </button>
                                 </subviews>
